feat: add get by id and customerid
